a4_schedulers/make.out
scheduler.c: In function ‘tid_lt’:
scheduler.c:175:34: error: ‘stats_by_thread_t {aka struct __stats_by_thread_t}’ has no member named ‘tid’
   return ((stats_by_thread_t *)a)->tid < ((stats_by_thread_t *)b)->tid;
                                  ^
scheduler.c:175:66: error: ‘stats_by_thread_t {aka struct __stats_by_thread_t}’ has no member named ‘tid’
   return ((stats_by_thread_t *)a)->tid < ((stats_by_thread_t *)b)->tid;
                                                                  ^
scheduler.c: At top level:
scheduler.c:101:12: warning: ‘same_t’ defined but not used [-Wunused-function]
 static int same_t(void *a, void *b) {
            ^
scheduler.c: In function ‘tid_lt’:
scheduler.c:176:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
